# notes

./: alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 074b478b90cc_add_password_column_to_users.py
api/routes/: user_routes.py
core/: db.py
models/: user.py
repositories/: user_repository.py
services/: user_service.py
